# x-flow

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  README.md  xFlow.qrc  xFlow.txt
.github/: FUNDING.yml
.github/workflows/: build-daily.yml  build-ubuntu.yml  build-windows.yml
c/: CMakeLists.txt
c/bypass/: bypass.c  bypass.cmake
c/crc32_calc/: CMakeLists.txt  crc32_calc.c  crc32_calc.cmake  crc32_calc.h  crc32_calc_unittest.cpp
c/crc32_calc/conf/: conf.json
c/crc32_calc/crc32_calc/conf/: conf.json
c/crc32_calc/crc32_calc/lib/: README.md
c/crc32_calc/lib/: README.md
c/crccalculator/: CMakeLists.txt
c/crccalculator/src/: c_plugin_crc_calculator.c  c_plugin_crc_calculator.h  c_plugin_crc_calculator_unittest.cpp
c/src/: crc32_calc.c  crc32_calc.h  crc32_calc_unittest.cpp
checker/: .clang-format  .gitignore  CMakeLists.txt  checker.rc
checker/src/: xflowpluginchecker.cpp  xflowpluginchecker.h  xflowpluginchecker.ui
cmake/: 3rd.cmake  common.cmake
cmake/linux/: linux.cmake
docs/: _config.yml  index.md
docs/_includes/: affixes.html  esc.html  format.html  server.html
docs/docs/2.install/: index.md  install-community.md  install-store.md
docs/docs/3.nodes/: 4.1.1serialport.md  4.1.2tcpclient.md  4.14communication-udpclient.md  4.15communication-udpserver.md  4.16communication-websocketclient.md  4.1communication.md  4.2.1userinput.md  4.2.4datapersistence.md  4.2inputoutput.md  4.3.5frameanalyzer.md  4.3.7sumcalculator.md  4.4.1commandline.md  4.5hub.md  communication.md  hub.md  index.md  processor.md
docs/docs/3.nodes/.1communication/: index.md
docs/docs/3.nodes/.2inputoutput/: index.md
docs/docs/3.nodes/.3processor/: index.md
docs/docs/3.nodes/.4scripts/: index.md
docs/docs/3.nodes/.5hub/: index.md
docs/docs/3.start/: index.md
docs/docs/4.nodes/: 4.1.1serialport.md  4.1.2tcpclient.md  4.1.3tcpserver.md  4.1.4udpclient.md  4.1.5udpserver.md  4.1.6websocketclient.md  4.1.7websocketserver.md  4.1.8localsocket.md  4.1.9localserver.md  4.1communication.md  4.2.1userinput.md  4.2.2debugoutput.md  4.2.2output.md  4.2.3randomgenerator.md  4.2.4datapersistence.md  4.2.5dataview.md  4.2inputoutput.md  4.3.1aescipher.md  4.3.2crccalculator.md  4.3.3crcchecker.md  4.3.4filter.md  4.3.5frameanalyzer.md  4.3.6masker.md  4.3.7sumcalculator.md  4.3.8sumchecker.md  4.3dataprocess.md  4.4.1commandline.md  4.4.2javascript.md  4.4.3luascript.md  4.4.4pythonscript.md  4.4scripts.md  4.5.1nx1.md  4.5.21xn.md  4.5hub.md
docs/docs/4.plugins/: 1.lua.md  2.javascript.md  3.python.md  4.c.md  index.md
docs/docs/5.history/: v3.0.md
docs/docs/5.plugins/: 1.lua.md  2.javascript.md  3.python.md  4.c.md  5.qt.md  index.md
docs/docs/6.3rd/: index.md
docs/docs/6.history/: index.md  v3.0.md
docs/docs/6.thirdparty/: index.md
docs/docs/7.thirdparty/: index.md
docs/docs/_include/: textformat.md
docs/docs/_includes/: textformat.md
js/: bypass.mjs  do_nothing.js
libs/microsoftstore/: CMakeLists.txt
libs/microsoftstore/src/: microsoftstore.cpp  microsoftstore.h
lua/: bypass.lua  do_nothing.lua
plugins/c/bypass/: bypass.cmake  bypass_unittest.cpp
plugins/c/crc32_calc/: crc32_calc.cmake
plugins/checker/: CMakeLists.txt  checker.qrc
plugins/checker/src/: main.cpp  xflowpluginchecker.h
plugins/cmake/: rm.cmake
plugins/js/: bypass.mjs
plugins/lua/: bypass.lua
plugins/qt/: CMakeLists.txt
plugins/qt/bypass/: bypass.h
plugins/qt/datachecker/: CMakeLists.txt  datachecker.cpp  datachecker.h  datacheckerui.cpp
plugins/qt/include/: xflowplugininterfacev1.h
python/: bypass.py
qt/: CMakeLists.txt
qt/bypass/: CMakeLists.txt  bypass.cpp
qt/datachecker/: CMakeLists.txt  conf.json  datachecker.cpp  datachecker.h  datachecker.ui  datacheckerui.cpp  datacheckerui.h  datacheckerui.ui
qt/include/: xflowplugininterface.h  xflowplugininterfacev1.h
res/demo/: BaseIO.flow
res/scripts/: cmd.py
res/translations/: xFlow_en.qm  xFlow_en.ts  xFlow_zh_CN.qm  xFlow_zh_CN.ts
scripts/: ci-build-ubuntu-20.04.sh
scripts/msix/: build-for-store.bat
scripts/zip/: build-for-zip.bat
src/: application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/c/: .clang-format  CMakeLists.txt
src/c/crccalculator/: CMakeLists.txt
src/c/crccalculator/conf/: conf.json
src/c/crccalculator/crccalculator/conf/: conf.json
src/c/crccalculator/crccalculator/lib/: c_plugin-crc-calculator.ilk
src/c/crccalculator/lib/: README.md
src/c/crccalculator/src/: c-plugin-crc-calculator.c
src/c/src/: c-plugin-crc-calculator.c
src/common/: common.cpp  common.h  crc.cpp  crc.h
src/device/: chartstest.cpp  chartstest.h  chartstestui.cpp  chartstestui.h  device.cpp  device.h  devicefactory.cpp  devicefactory.h  deviceui.cpp  deviceui.h  localserver.cpp  localserverui.cpp  localserverui.h  localsocket.cpp  localsocketui.cpp  localsocketui.h  serialport.cpp  serialport.h  serialportui.cpp  serialportui.h  serialportui.ui  socket.cpp  socket.h  socketclient.cpp  socketclient.h  socketclientui.cpp  socketclientui.h  socketserver.cpp  socketserver.h  socketserverui.cpp  socketserverui.h  socketui.cpp  socketui.h  tcpclient.cpp  tcpclient.h  tcpclientui.cpp  tcpclientui.h  tcpserver.cpp  tcpserver.h  tcpserverui.cpp  (+17 more)
src/dockwidgets/log/: logdockwidgetcontent.cpp
src/dockwidgets/navigator/: navigatordockwidgetcontent.cpp
src/dockwidgets/nodes/: nodesdockwidget.cpp  nodesdockwidget.h  nodesdockwidgetcontent.cpp  nodesdockwidgetcontent.h
src/dockwidgets/output/: outputdockwidgetcontenttextbroswer.cpp
src/license/: licensemanager.cpp  licensemanager.h  licensemanagerui.cpp  licensemanagerui.h  licensemanagerui.ui  payjsapi.cpp  payjsapi.h
src/nodeeditor/: nodeeditorregistry.cpp  nodeeditorruler.cc  nodeeditorview.cc
src/nodeeditor/nodes/dataprocess/: filterui.cpp
src/nodeeditor/nodes/inputoutput/: dataviewui.cc
src/nodeeditor/nodes/script/: javascriptthread.cpp  (+2 more)
src/nodeeditor/plugin/: pluginnode.cpp
src/preference/: preference.cpp  preference.h  preference.ui
src/theme/: thememanager.cpp  thememanager.h
(+1 files in other folders)
